10-43_ファイルパス投稿API_Service クラスを仮実装する
